added local settings for doxygen

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Simulation Environment/.project
 .vscode/settings.json
 Simulation Environment/.pydevproject
 src/__pycache__/action.cpython-36.pyc
+Doxyfile
+
